# serde-double-tag

./: CHANGELOG  Cargo.toml  README.md  \
serde-double-tag/: Cargo.toml  README.md  README.tpl
serde-double-tag-derive/: Cargo.toml
serde-double-tag-derive/src/: deserialize.rs  lib.rs  serialize.rs  util.rs
serde-double-tag-derive/src/config_enum/: deserialize_partial.rs  json_schema.rs  mod.rs  serialize_partial.rs
serde-double-tag-derive/src/generate/: deserialize.rs  json_schema.rs  mod.rs  serialize.rs
serde-double-tag-derive/src/input/: attrs.rs  mod.rs
serde-double-tag-derive/src/input/attributes/: args.rs  mod.rs
serde-double-tag-derive/src/util/: case.rs  mod.rs  prune_generics.rs  rename_rule.rs
serde-double-tag/src/: internal__.rs  lib.rs
serde-double-tag/tests/: serialize.rs
serde-exjacent/: Cargo.toml
serde-exjacent-derive/: Cargo.toml
serde-exjacent-derive/src/: deserialize.rs  lib.rs  serialize.rs  util.rs
serde-exjacent/src/: internal__.rs  lib.rs
serde-exjacent/tests/: serialize.rs
