[package]
name = "serde-double-tag-derive"
description = "proc macros for the `serde-double-tag` crate"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.68", features = ["full", "visit"] }
serde_derive_internals = "=0.29.1" # no semver guarantees, so pin exact version
