[package]
name = "serde-double-tag-derive"
description = "proc macros for the `serde-double-tag` crate"
version = "0.0.3"
license = "BSD-2-Clause"
repository = "https://github.com/de-vri-es/serde-double-tag"
documentation = "https://docs.rs/serde-double-tag-derive"

edition = "2021"
publish = ["crates-io"]

[lib]
proc-macro = true

[features]
schemars = []

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.68", features = ["full", "visit"] }

[dev-dependencies]
serde-double-tag-derive = { path = ".", features = ["schemars"] }
