[package]
name = "serde-double-tag"
version = "0.1.0"
edition = "2021"

[features]
derive = ["dep:serde-double-tag-derive"]
schemars = ["dep:schemars"]

[dependencies]
schemars = { version = "0.8.21", features = ["preserve_order"], optional = true }
serde = { version = "1.0.203", features = ["derive"] }
serde-double-tag-derive = { version = "=0.1.0", optional = true, path = "../serde-double-tag-derive" }
serde_json = { version = "1.0.118", features = ["preserve_order"] }

[dev-dependencies]
serde-double-tag = { path = ".", features = ["derive"] }

assert2 = "0.3.14"
