[package]
name = "serde-double-tag"
description = "double tagged enum representation for `serde`"
version = "0.0.4"
license = "BSD-2-Clause"
repository = "https://github.com/de-vri-es/serde-double-tag"
documentation = "https://docs.rs/serde-double-tag"
keywords = ["serde", "enum", "double", "tag"]
categories = ["parsing"]
readme = "README.md"

edition = "2021"
publish = ["crates-io"]

[features]
schemars = ["dep:schemars", "dep:serde_json", "serde-double-tag-derive/schemars"]

[dependencies]
schemars = { version = "0.8.21", optional = true, features = ["preserve_order"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-double-tag-derive = { version = "=0.0.4", path = "../serde-double-tag-derive" }
serde_json = { version = "1.0.118", optional = true, features = ["preserve_order"] }

[dev-dependencies]
assert2 = "0.3.14"
serde-double-tag = { path = ".", features = ["schemars"] }
serde_json = { version = "1.0.118", features = ["preserve_order"] }

[package.metadata.docs.rs]
all-features = true
